--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "@moonjot/moon-sample-plugin",
-  "version": "0.0.0",
+  "name": "@moonjot/moon-reflect-plugin",
+  "version": "0.0.1",
   "description": "Moon sample plugin for Moon",
   "main": "./dist/index.js",
   "dependencies": {
-    "@moonjot/moon": "^0.1.72"
+    "@moonjot/moon": "^0.1.78",
+    "@moonjot/moon-utils": "^0.0.8"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/castroCrea/moon-sample-plugin"
+    "url": "https://github.com/castroCrea/moon-reflect-plugin"
   },
   "types": "./dist/index.d.ts",
   "scripts": {
